# rusty-cad

./: .gitignore  Cargo.toml  Makefile  ideas
src/: lib.rs  main.rs  math.rs  object_2d.rs  object_3d.rs
